[package]
name = "qimem"
version = "0.1.0"
edition = "2021"

[lib]
name = "qimem"
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
ring = "0.17.8"
rand = "0.8.5"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
thiserror = "1.0.63"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.13.0"