[package]
name = "qimem"
version = "0.1.0"
edition = "2021"

[lib]
name = "qimem"
crate-type = ["cdylib"]

[[bin]]
name = "qimem"
path = "src/main.rs"

[dependencies]
# Keep PyO3 for the library part (if you need Python extension)
pyo3 = { version = "0.22.6", features = ["extension-module", "abi3-py38"] }
# Keep all your existing dependencies
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
chrono = "0.4"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["std", "rand_core"] }
serde_json = "1.0"
base64 = "0.22"
totp-rs = "5.7"
regex = "1.10"
bincode = "1.3"
chacha20poly1305 = "0.10"
# Add the missing AES dependency
aes = "0.8"

[build-dependencies]
pyo3-build-config = "0.22"