[project]
name = "qimem"
version = "0.1.0"
description = "Proprietary encryption library for Arthimetic"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"