[project]
name = "qimem"
version = "0.1.0"
description = "Proprietary encryption library for Arthimetic"
authors = [{ name = "EYU" }]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pytest"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"